--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "husky": "^9.1.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-instantsearch": "^7.12.4"
+    "react-instantsearch": "^7.12.4",
+    "react-router-dom": "^6.26.1"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.6.1",
